# fyp-vrp

./: .gitignore  README.md  output_errors_uv  pyproject.toml  pyrightconfig.json
dcvrp_replication/: dcvrp_env.py  train_dcvrp.py
evaluation/: __init__.py  aggregate.py  coverage.py  exploration.ipynb  load_results.py  plots.py  style.py  thesis_evaluation.ipynb  thesis_results.ipynb
examples/: inspect_routes.py
latex_writeup/: .gitignore  main.acn  main.acr  main.alg  main.aux  main.bbl  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.glg  main.glo  main.gls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  main.xdv  references.bib  rewrap_tex.py
notebooks/: 01_heuristics.ipynb  03_hybrid.ipynb  04_der_generator.ipynb  05_rl4co.ipynb  06_cvrp_rl4co.ipynb  07_solomon_without_der.ipynb  08_tests_for_10_customers_RC1.ipynb  09_cvrptw_rl4co.ipynb  09_cvrptw_rl4co.py  09_cvrptw_rl4co_backup.py  10_30_60_180_300_results  10_routefinder copy.py  11_routefinder.ipynb  14_routefinder_with_lateness.ipynb  15_routefinder_with_dynamic_env.ipynb  abela-cvrp.ipynb  minimalPlanPhase1 copy.ipynb  minimalPlanPhase1.ipynb
scripts/: 11_routefinder.py  12_routefinder_smoketest.py  13_routefinder_general.py  14_routefinder_with_lateness.py  15_dynamic_training.py  16_train_routefinder_75_general_and_solomon.py  20_50_am.py  benchmark_fixed.py  penalized_vs_non_penalized_vs_tw_and_non_tw.py  quickstart.sh  run_all.sh
scripts_to_send/: requirements.txt
tests/: test_dynamic_instance.py  test_inspector_frames.py  test_parser_and_metrics.py  (+1 more)
(+101 files in other folders)
